# erm

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: README.md  architecture.md  changelog.md  cli-reference.md  concepts.md  denoise-and-room-tone.md  detection.md  faq.md  index.md  installation.md  modes-and-padding.md  recipes.md  render-pipeline.md  transcription.md  troubleshooting.md  usage.md  video-render.md  video.md
scripts/: gen_cli_docs.py
skills/erm/: SKILL.md
skills/erm-tune/: SKILL.md
src/erm/: __init__.py  asr.py  audio.py  cli.py  ffmpeg_ops.py  ranges.py  validate.py  video.py
tests/: test_asr_fallback.py  test_cli.py  test_integration.py  test_pure.py  test_render_modes.py  test_video.py
