[project]
name = "erm"
version = "0.2.0"
description = "Strip disfluencies (um, uh, er, ah, hmm) from spoken audio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Doug Calobrisi", email = "doug@calobrisi.com" }]
keywords = ["audio", "speech", "transcription", "filler-words", "disfluency", "whisper", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = [
    "faster-whisper>=1.0.3",
    "numpy>=1.26",
    "librosa>=0.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
build = ["build>=1.2", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/dougcalobrisi/erm"
Repository = "https://github.com/dougcalobrisi/erm"
Issues = "https://github.com/dougcalobrisi/erm/issues"

[project.scripts]
erm = "erm.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["slow: tests that need the Whisper model (download required)"]
